--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,6 @@
-
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Auto Math Tapper 2</string>
-    <string name="accessibility_desc">Auto tap to select the correct math answer on screen.</string>
-    <string name="accessibility_summary">Enable to allow automatic tapping on correct answers.</string>
-    <string name="start_analyze">Start Analyze</string>
-    <string name="upload_symbols">Upload Symbols</string>
-    <string name="pick_roi">Pick ROI</string>
-    <string name="test_symbols">Test Symbols</string>
-    <string name="status_ready">Ready</string>
-    <string name="save">Save</string>
-    <string name="cancel">Cancel</string>
-    <string name="request_capture">Request Capture</string>
-</resources>
     <string name="start_live">START LIVE</string>
     <string name="stop_live">STOP LIVE</string>
+</resources>
