--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- App -->
     <string name="app_name">Auto Math Tapper 2</string>
+
+    <!-- Main UI -->
+    <string name="upload_symbols">Upload Symbols</string>
+    <string name="pick_roi">Pick ROI</string>
+    <string name="request_capture">Request Capture</string>
+    <string name="start_analyze">START ANALYZE</string>
+    <string name="test_symbols">Test Symbols</string>
+    <string name="status_ready">Ready</string>
+
+    <!-- Live mode (أضفناها سابقًا) -->
     <string name="start_live">START LIVE</string>
     <string name="stop_live">STOP LIVE</string>
+
+    <!-- Pick ROI dialog/buttons -->
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
 </resources>
